# summary_bot_opensource

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: commands.py  constants.py  deployment.py  events.py  main.py  summary.py  webhook-test.py  webhook.py
src/static/: webhook-server-example.json
src/test/: call-webhook1.py
